# jobpilot

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  REDESIGN.md  TODOS.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: tests.yml
data/: master_cover_letter.example.json  master_cv.example.json  profile.example.json  stories.example.json  target_companies.example.json
docs/: discovery_dataflow_analysis.html
infra/launchd/: bot.plist.example  inbox-sync.plist.example
patches/: @jackwener+opencli+1.7.18.patch  @jackwener+opencli+1.7.22.patch
src/jobpilot/: __init__.py  agents.py  api.py  app.py  app_runner.py  ats.py  bot.py  cleanup.py  cli.py  config.py  gaps.py  graph.py  inbox_sync.py  job_sources.py  llm.py  notify.py  profile.py  referrals.py  renderer.py  state.py  storage.py  stories.py
src/jobpilot/discovery/: __init__.py  ats_sources.py  opencli_source.py
templates/: cover_letter.tex  cv.tex
tests/: test_ats.py  test_ats_sources.py  test_bot.py  test_cleanup.py  test_dedup.py  test_digest_dedup.py  test_gaps.py  test_inbox_sync.py  test_job_folder.py  test_opencli_source.py  test_referrals.py  test_renderer.py  test_scoring_referrals.py  test_seniority_filter.py  test_stories.py  test_tailor_eval.py  test_variants.py
